--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
         <activity android:name=".activities.LoginAct">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +22,9 @@
         </activity>
         <activity android:name=".activities.NewUserAct" />
         <activity android:name=".activities.ExistingUserAct" />
-        <activity android:name=".activities.MainMenuAct"></activity>
+        <activity android:name=".activities.MainMenuAct" />
+        <activity android:name=".activities.AccountSettings" />
+        <activity android:name=".activities.PreStartRecording"></activity>
     </application>
 
 </manifest>
